# perspective-engine

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  _cache.py
adapters/image_gen/: __init__.py  base.py  fal.py  mock.py
adapters/llm/: __init__.py  anthropic.py  base.py  mock.py
adapters/video_gen/: __init__.py  base.py  fal.py  mock.py
adapters/voice/: __init__.py  base.py  elevenlabs.py  mock.py
cli/: __init__.py  run.py
docs/decisions/: 0001-core-architecture.md
graph/: __init__.py  assets.py  checkpointer.py  config.py  graph.py  state.py  validation.py
graph/nodes/: __init__.py  assemble.py  generate_character_refs.py  generate_metadata.py  generate_shots.py  generate_voiceover.py  human_review_final.py  human_review_script.py  ideate.py  publish.py  quality_gate.py  shot_breakdown.py  write_script.py
tests/: __init__.py  conftest.py  test_fanout.py  test_graph_e2e.py  test_interrupts.py  test_invariants.py  test_retry_cap.py  test_state.py  test_still_first.py
